--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -21,6 +21,7 @@
     </table>
 
     <a href="/articles/{{article.id}}/edit" class="btn btn-primary">수정</a>
+    <a href="/articles/{{article.id}}/delete" class="btn btn-danger">삭제</a>
     <a href="/articles" class="btn btn-secondary">목록</a>
 </div>
 
