--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -23,6 +23,8 @@
     <a href="/articles/{{article.id}}/edit" class="btn btn-primary">수정</a>
     <a href="/articles/{{article.id}}/delete" class="btn btn-danger">삭제</a>
     <a href="/articles" class="btn btn-secondary">목록</a>
+
 </div>
 
+{{>comments/_comments}} <!-- 상세 페이지에 댓글 뷰 파일 삽입 -->
 {{>layouts/footer}}
